syntax = "proto3";

option csharp_namespace = "LibplanetConsole.Seed.Grpc";

package libplanet.console.seed.v1;

service SeedGrpcService {
  rpc GetSeed(GetSeedRequest) returns (GetSeedResponse);
}

message SeedInfo {
    string blocksyncSeedPeer = 1;
    string consensusSeedPeer = 2;
}

message GetSeedRequest {
  string publicKey = 1;
}

message GetSeedResponse {
    SeedInfo seedResult = 1;
}
